We should always emit an entry for "."

Note this doesn't fix the bug yet, as the KIO just redirects to the SSHFS,
which happens to have the same problem.

BUG: 367878